--- a/.github/workflows/minecraft_server_query.yml
+++ b/.github/workflows/minecraft_server_query.yml
@@ -3,10 +3,10 @@ name: Build Commands
 on:
   push:
     branches: [ master ]
-    paths: [ 'minecraft_server_query' ]
+    paths: [ 'minecraft_server_query/' ]
   pull_request:
     branches: [ master ]
-    paths: [ 'minecraft_server_query' ]
+    paths: [ 'minecraft_server_query/' ]
 
 jobs:
   build:
