Don't make executable

--- a/minecraft_server_query/box.json.dist
+++ b/minecraft_server_query/box.json.dist
@@ -1,4 +1,5 @@
 {
+    "chmod": "0440",
     "main": "src/main.php",
     "output": "../bin/minecraft_server_query.phar",
 
@@ -8,5 +9,5 @@
             "name": "*.php",
             "in": "vendor"
          }
-    ]
+    ],
 }
